# weather-data-downloader

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  download_nwp_model_output.py  mypy.ini  pyproject.toml  requirements-ecmwf.txt  requirements-lint.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
src/download_nwp_model_output/: __init__.py  __main__.py  conventions_utilities.py  data_source.py  nwp_models.py
tests/: test_data_download.py
