[metadata]
name=weather-data-downloader
version=file:VERSION
description=Download NWP model data
long_description=file:README.rst
long_description_content_type=text/x-rst
platform=any
author=DWesl
author_email=https://github.com/DWesl/weather-data-downloader/issues
url=https://github.com/DWesl/weather-data-downloader
classifiers=
    Development Status :: 1 - Development
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
zip-safe=True

[options]
install_requires =
    cmdline_provenance
    dataclasses; python_version < "3.7"
    eccodes
    importlib_metadata; python_version < "3.8"
    metpy
    numpy
    python-dateutil
    siphon
    xarray
package_dir=
    =src
packages=find:
python_requires= >=3.6.*, <4.*

[options.entry_points]
console_scripts=
    download-nwp-model-data=download_nwp_model_output.__main__:main

[options.packages.find]
where=src

[sdist]
formats=bztar,zip,gztar,xztar