[metadata]
name = weather_data_downloader
version = file:VERSION
description = Download NWP model data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/DWesl/weather-data-downloader
author = DWesl
author_email = https://github.com/DWesl/weather-data-downloader/issues
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 1 - Development
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
platform = any
zip_safe = True

[options]
packages = find:
install_requires =
    cmdline_provenance
    metpy
    numpy
    python-dateutil
    siphon
    xarray
    dataclasses;python_version < "3.7"
    importlib_metadata;python_version < "3.8"
python_requires = >=3.6.*, <4.*
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    download-nwp-model-data=download_nwp_model_output.__main__:main

[options.extras_require]
ecmwf =
    eccodes

[sdist]
formats = bztar,zip,gztar,xztar
